<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <Button
        android:id="@+id/EdProfSearBtn"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:text="@string/EdProfSearBtn"
        app:backgroundTint="#BFBFBF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <TextView
        android:id="@+id/EdProfUnTv"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:text="@string/EdProfUnTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        tools:text="@string/EdProfUnTv" />

    <EditText
        android:id="@+id/EdProfUnEt"
        android:layout_width="217dp"
        android:layout_height="42dp"
        android:hint="@string/EdProfUnEt"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/EdProfDobTv"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:text="@string/EdProfDobTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        tools:text="@string/EdProfDobTv" />

    <TextView
        android:id="@+id/EdProfGenTv"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:text="@string/EdProfGenTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/EdProfGenTv" />

    <EditText
        android:id="@+id/EdProfDobEt"
        android:layout_width="217dp"
        android:layout_height="42dp"
        android:hint="@string/EdProfDobEt"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <EditText
        android:id="@+id/EdProfPwEt"
        android:layout_width="217dp"
        android:layout_height="42dp"
        android:hint="@string/EdProfPwEt"
        android:inputType="textVisiblePassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/EdProfPwTv"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:text="@string/EdProfPwTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397"
        tools:text="@string/EdProfPwTv" />

    <Button
        android:id="@+id/EdProfEditBtn"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:text="@string/EdProfEditBtn"
        app:backgroundTint="#BFBFBF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <Button
        android:id="@+id/EdProfDelBtn"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:text="@string/EdProfDelBtn"
        app:backgroundTint="#BFBFBF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <RadioGroup
        android:id="@+id/EdProfRb"
        android:layout_width="226dp"
        android:layout_height="41dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/EdProfRb1"
            android:layout_width="97dp"
            android:layout_height="35dp"
            android:text="@string/EdProfRb1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />

        <RadioButton
            android:id="@+id/EdProfRb2"
            android:layout_width="98dp"
            android:layout_height="35dp"
            android:text="@string/EdProfRb2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>