<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/homUnTv"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:text="@string/homUnTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        tools:text="@string/homUnTv" />

    <TextView
        android:id="@+id/homPwTv"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:text="@string/homPwTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        tools:text="@string/homPwTv" />

    <EditText
        android:id="@+id/homUnEt"
        android:layout_width="217dp"
        android:layout_height="42dp"
        android:hint="@string/homUnEt"
        android:inputType="textPersonName"
        android:text="@string/homUnEt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        tools:text="@string/homUnEt" />

    <EditText
        android:id="@+id/homPwEt"
        android:layout_width="217dp"
        android:layout_height="42dp"
        android:inputType="textPassword"
        android:text="@string/homPwEt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        tools:text="@string/homPwEt" />

    <Button
        android:id="@+id/homLogBtn"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:text="@string/homLogBtn"
        app:backgroundTint="#BFBFBF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/homRegBtn"
        android:layout_width="121dp"
        android:layout_height="40dp"
        android:text="@string/homRegBtn"
        app:backgroundTint="#BFBFBF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

</androidx.constraintlayout.widget.ConstraintLayout>